--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,16 +13,17 @@ services:
             - '5432:5432'
         volumes:
             - 'postgres:/var/lib/postgresql/data'
-    ci_test:
-        depends_on: 
-            - 'redis'
-            - 'postgres'
-        build: .
-        volumes: 
-            - '.:/source'
-        links: 
-            - 'redis'
-            - 'postgres'
+    # ci_test:
+    #     depends_on: 
+    #         - 'redis'
+    #         - 'postgres'
+    #     build: .
+    #     command: 'cargo run'
+    #     volumes: 
+    #         - '.:/source'
+    #     links: 
+    #         - 'redis'
+    #         - 'postgres'
 
 volumes: 
     redis:
